--- a/materials.html
+++ b/materials.html
@@ -4,105 +4,189 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MediaFire Auto Download</title>
+
 <style>
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Poppins', sans-serif; }
-body {
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:'Poppins',sans-serif;
+}
+
+body{
     min-height:100vh;
-    background: linear-gradient(135deg, #667eea, #764ba2);
-    display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
+    background:linear-gradient(135deg,#667eea,#764ba2);
+    display:flex;
+    flex-direction:column;
+    align-items:center;
     padding:40px 20px;
     color:#fff;
 }
-h1 { font-size:2.2rem; margin-bottom:30px; text-align:center; text-shadow: 1px 1px 6px rgba(0,0,0,0.3);}
 
-#cardsContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    width: 100%;
-    max-width: 1200px;
-}
-.card {
-    background: rgba(255,255,255,0.08);
-    backdrop-filter: blur(12px);
-    padding:25px 20px;
-    border-radius:20px;
+h1{
+    font-size:2.2rem;
+    margin-bottom:30px;
     text-align:center;
-    box-shadow:0 10px 30px rgba(0,0,0,0.2);
-    transition: transform 0.3s, box-shadow 0.3s;
+    text-shadow:1px 1px 6px rgba(0,0,0,.3);
 }
-.card:hover { transform: translateY(-5px); box-shadow:0 15px 35px rgba(0,0,0,0.3);}
-.card img.logo {
-    width:80px; height:80px; object-fit:contain; margin-bottom:15px;
-    border-radius:15px; background: rgba(255,255,255,0.15); padding:10px;
+
+/* container */
+#cardsContainer{
+    width:100%;
+    max-width:1200px;
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(350px,1fr));
+    gap:20px;
 }
-.card p.filename { font-size:1.1rem; font-weight:500; margin-bottom:15px;}
-button {
-    background:#ff6b6b; border:none; padding:12px 25px; border-radius:50px; color:#fff;
-    font-size:1rem; cursor:pointer; transition:0.3s; box-shadow:0 5px 15px rgba(0,0,0,0.2);
+
+/* card ngang */
+.card{
+    background:rgba(255,255,255,.08);
+    backdrop-filter:blur(12px);
+    border-radius:20px;
+    padding:20px;
+    display:flex;
+    align-items:center;
+    gap:20px;
+    box-shadow:0 10px 30px rgba(0,0,0,.2);
+    transition:.3s;
 }
-button:hover { background:#ff4757; transform: translateY(-3px); box-shadow:0 8px 20px rgba(0,0,0,0.3);}
-.status { margin-top:10px; font-size:0.95rem; color:#f1f1f1;}
-@media(max-width:800px){ #cardsContainer { grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); } .card img.logo { width:60px; height:60px; } }
-@media(max-width:500px){ #cardsContainer { grid-template-columns: 1fr; } }
+
+.card:hover{
+    transform:translateY(-5px);
+    box-shadow:0 15px 35px rgba(0,0,0,.3);
+}
+
+/* logo */
+.logo{
+    width:70px;
+    height:70px;
+    padding:10px;
+    background:rgba(255,255,255,.15);
+    border-radius:15px;
+    object-fit:contain;
+    flex-shrink:0;
+}
+
+/* content */
+.content{
+    flex:1;
+}
+
+.filename{
+    font-size:1.05rem;
+    font-weight:500;
+    margin-bottom:10px;
+    word-break:break-word;
+}
+
+button{
+    background:#ff6b6b;
+    border:none;
+    padding:10px 22px;
+    border-radius:50px;
+    color:#fff;
+    font-size:.95rem;
+    cursor:pointer;
+    transition:.3s;
+    box-shadow:0 5px 15px rgba(0,0,0,.2);
+}
+
+button:disabled{
+    opacity:.6;
+    cursor:not-allowed;
+}
+
+button:hover:not(:disabled){
+    background:#ff4757;
+    transform:translateY(-2px);
+}
+
+.status{
+    margin-top:8px;
+    font-size:.9rem;
+    opacity:.9;
+}
+
+/* mobile */
+@media(max-width:600px){
+    .card{
+        flex-direction:column;
+        text-align:center;
+    }
+}
 </style>
 </head>
+
 <body>
 
 <h1>MediaFire Auto Download</h1>
-
 <div id="cardsContainer"></div>
 
 <script>
 const files = [
-  { url: "https://www.mediafire.com/file/mdebs62owydlr11/CodexSamehwidGlobal-2.701.966.apk/file", logo: "https://upload.wikimedia.org/wikipedia/commons/3/33/Android_robot.png" },
-  { url: "https://www.mediafire.com/file/EXAMPLE2/file", logo: "https://upload.wikimedia.org/wikipedia/commons/0/02/PDF_icon.svg" },
-  { url: "https://www.mediafire.com/file/EXAMPLE3/file", logo: "https://upload.wikimedia.org/wikipedia/commons/8/82/Zip_icon.svg" },
-  { url: "https://www.mediafire.com/file/EXAMPLE4/file", logo: "https://upload.wikimedia.org/wikipedia/commons/8/89/File_icon.png" }
+  {
+    url:"https://www.mediafire.com/file/mdebs62owydlr11/CodexSamehwidGlobal-2.701.966.apk/file",
+    logo:"https://upload.wikimedia.org/wikipedia/commons/3/33/Android_robot.png"
+  },
+  {
+    url:"https://www.mediafire.com/file/EXAMPLE2/file",
+    logo:"https://upload.wikimedia.org/wikipedia/commons/0/02/PDF_icon.svg"
+  },
+  {
+    url:"https://www.mediafire.com/file/EXAMPLE3/file",
+    logo:"https://upload.wikimedia.org/wikipedia/commons/8/82/Zip_icon.svg"
+  },
+  {
+    url:"https://www.mediafire.com/file/EXAMPLE4/file",
+    logo:"https://upload.wikimedia.org/wikipedia/commons/8/89/File_icon.png"
+  }
 ];
 
 const proxy = "https://api.allorigins.win/raw?url=";
 const container = document.getElementById("cardsContainer");
 
-files.forEach(file => {
-    const card = document.createElement("div");
-    card.className = "card";
-    card.innerHTML = `
-        <img class="logo" src="${file.logo}" alt="File Logo">
-        <p class="filename">Đang lấy tên file...</p>
-        <button disabled>Tải File</button>
-        <p class="status">Đang lấy thông tin...</p>
+files.forEach(file=>{
+    const card=document.createElement("div");
+    card.className="card";
+    card.innerHTML=`
+        <img class="logo" src="${file.logo}">
+        <div class="content">
+            <p class="filename">Đang lấy tên file...</p>
+            <button disabled>Tải file</button>
+            <p class="status">Đang lấy thông tin...</p>
+        </div>
     `;
     container.appendChild(card);
 
-    const filenameEl = card.querySelector(".filename");
-    const btn = card.querySelector("button");
-    const status = card.querySelector(".status");
+    const filenameEl=card.querySelector(".filename");
+    const btn=card.querySelector("button");
+    const status=card.querySelector(".status");
 
-    fetch(proxy + encodeURIComponent(file.url))
-        .then(res => res.text())
-        .then(html => {
-            const match = html.match(/var\s+optFileName\s*=\s*"([^"]+)"/);
-            const fileName = match ? match[1] : "Không xác định";
-            filenameEl.textContent = fileName;
+    fetch(proxy+encodeURIComponent(file.url))
+        .then(r=>r.text())
+        .then(html=>{
+            const nameMatch=html.match(/var\s+optFileName\s*=\s*"([^"]+)"/);
+            filenameEl.textContent=nameMatch?nameMatch[1]:"Không xác định";
 
-            const doc = new DOMParser().parseFromString(html, "text/html");
-            const downloadLink = doc.querySelector("#downloadButton")?.href;
+            const doc=new DOMParser().parseFromString(html,"text/html");
+            const link=doc.querySelector("#downloadButton")?.href;
 
-            if(!downloadLink){
-                status.textContent = "Không lấy được link 😢";
-                btn.disabled = true;
+            if(!link){
+                status.textContent="Không lấy được link 😢";
                 return;
             }
 
-            status.textContent = "Sẵn sàng tải file 🚀";
-            btn.disabled = false;
-            btn.onclick = () => {
-                status.textContent = "Đang tải file... ⏳";
-                window.location.href = downloadLink;
+            status.textContent="Sẵn sàng tải 🚀";
+            btn.disabled=false;
+            btn.onclick=()=>{
+                status.textContent="Đang tải... ⏳";
+                window.location.href=link;
             }
         })
-        .catch(() => { status.textContent = "Lỗi kết nối MediaFire 😵"; });
+        .catch(()=>{
+            status.textContent="Lỗi kết nối MediaFire 😵";
+        });
 });
 </script>
 
