--- a/materials.html
+++ b/materials.html
@@ -10,60 +10,99 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family:'Poppins',sans-serif;
+    font-family:Inter,system-ui,sans-serif;
 }
 
+/* background */
 body{
     min-height:100vh;
-    background:linear-gradient(135deg,#667eea,#764ba2);
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    padding:40px 20px;
-    color:#fff;
-}
-
-h1{
-    font-size:2.2rem;
-    margin-bottom:30px;
-    text-align:center;
-    text-shadow:1px 1px 6px rgba(0,0,0,.3);
+    color:#eaeaea;
+    background:
+        radial-gradient(circle at 1px 1px, #222 1px, transparent 0),
+        #0b0b0b;
+    background-size:22px 22px;
 }
 
 /* container */
-#cardsContainer{
-    width:100%;
+.wrapper{
     max-width:1200px;
+    margin:auto;
+    padding:40px 20px;
+}
+
+/* header */
+header{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    margin-bottom:40px;
+}
+
+.logo{
+    display:flex;
+    align-items:center;
+    gap:10px;
+    font-weight:600;
+    font-size:1.2rem;
+}
+
+nav a{
+    color:#aaa;
+    margin-left:25px;
+    text-decoration:none;
+    font-size:.9rem;
+}
+
+nav a:hover{ color:#fff; }
+
+/* title box */
+.section{
+    background:rgba(255,255,255,.03);
+    border-radius:20px;
+    padding:35px;
+    box-shadow:0 0 0 1px rgba(255,255,255,.05);
+}
+
+.section h1{
+    font-size:2rem;
+    margin-bottom:10px;
+}
+
+.section p{
+    color:#aaa;
+    margin-bottom:30px;
+}
+
+/* cards */
+#cardsContainer{
     display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(350px,1fr));
+    grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
     gap:20px;
 }
 
-/* card ngang */
 .card{
-    background:rgba(255,255,255,.08);
-    backdrop-filter:blur(12px);
-    border-radius:20px;
+    background:rgba(255,255,255,.04);
+    border-radius:16px;
     padding:20px;
     display:flex;
-    align-items:center;
     gap:20px;
-    box-shadow:0 10px 30px rgba(0,0,0,.2);
-    transition:.3s;
+    align-items:center;
+    box-shadow:inset 0 0 0 1px rgba(255,255,255,.06);
+    transition:.25s;
 }
 
 .card:hover{
-    transform:translateY(-5px);
-    box-shadow:0 15px 35px rgba(0,0,0,.3);
+    background:rgba(255,255,255,.07);
+    transform:translateY(-3px);
 }
 
 /* logo */
-.logo{
-    width:70px;
-    height:70px;
+.logo-img{
+    width:64px;
+    height:64px;
     padding:10px;
-    background:rgba(255,255,255,.15);
-    border-radius:15px;
+    border-radius:14px;
+    background:rgba(255,255,255,.08);
     object-fit:contain;
     flex-shrink:0;
 }
@@ -74,38 +113,37 @@ h1{
 }
 
 .filename{
-    font-size:1.05rem;
+    font-size:1rem;
     font-weight:500;
-    margin-bottom:10px;
+    margin-bottom:12px;
     word-break:break-word;
 }
 
+/* button */
 button{
-    background:#ff6b6b;
+    background:#5865f2;
     border:none;
-    padding:10px 22px;
-    border-radius:50px;
     color:#fff;
-    font-size:.95rem;
+    padding:9px 18px;
+    border-radius:999px;
+    font-size:.9rem;
     cursor:pointer;
-    transition:.3s;
-    box-shadow:0 5px 15px rgba(0,0,0,.2);
-}
-
-button:disabled{
-    opacity:.6;
-    cursor:not-allowed;
+    transition:.2s;
 }
 
 button:hover:not(:disabled){
-    background:#ff4757;
-    transform:translateY(-2px);
+    background:#6b77ff;
+}
+
+button:disabled{
+    opacity:.5;
+    cursor:not-allowed;
 }
 
 .status{
     margin-top:8px;
-    font-size:.9rem;
-    opacity:.9;
+    font-size:.85rem;
+    color:#9aa0a6;
 }
 
 /* mobile */
@@ -120,11 +158,29 @@ button:hover:not(:disabled){
 
 <body>
 
-<h1>MediaFire Auto Download</h1>
-<div id="cardsContainer"></div>
+<div class="wrapper">
+
+<header>
+    <div class="logo">☠️ mediafire.tool</div>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Supported</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+    </nav>
+</header>
+
+<div class="section">
+    <h1>Auto Download</h1>
+    <p>Danh sách file MediaFire – lấy link & tải trực tiếp.</p>
+
+    <div id="cardsContainer"></div>
+</div>
+
+</div>
 
 <script>
-const files = [
+const files=[
   {
     url:"https://www.mediafire.com/file/mdebs62owydlr11/CodexSamehwidGlobal-2.701.966.apk/file",
     logo:"https://upload.wikimedia.org/wikipedia/commons/3/33/Android_robot.png"
@@ -136,56 +192,52 @@ const files = [
   {
     url:"https://www.mediafire.com/file/EXAMPLE3/file",
     logo:"https://upload.wikimedia.org/wikipedia/commons/8/82/Zip_icon.svg"
-  },
-  {
-    url:"https://www.mediafire.com/file/EXAMPLE4/file",
-    logo:"https://upload.wikimedia.org/wikipedia/commons/8/89/File_icon.png"
   }
 ];
 
-const proxy = "https://api.allorigins.win/raw?url=";
-const container = document.getElementById("cardsContainer");
+const proxy="https://api.allorigins.win/raw?url=";
+const container=document.getElementById("cardsContainer");
 
 files.forEach(file=>{
     const card=document.createElement("div");
     card.className="card";
     card.innerHTML=`
-        <img class="logo" src="${file.logo}">
+        <img class="logo-img" src="${file.logo}">
         <div class="content">
-            <p class="filename">Đang lấy tên file...</p>
+            <div class="filename">Đang lấy tên file...</div>
             <button disabled>Tải file</button>
-            <p class="status">Đang lấy thông tin...</p>
+            <div class="status">Đang lấy thông tin...</div>
         </div>
     `;
     container.appendChild(card);
 
-    const filenameEl=card.querySelector(".filename");
+    const nameEl=card.querySelector(".filename");
     const btn=card.querySelector("button");
     const status=card.querySelector(".status");
 
     fetch(proxy+encodeURIComponent(file.url))
         .then(r=>r.text())
         .then(html=>{
-            const nameMatch=html.match(/var\s+optFileName\s*=\s*"([^"]+)"/);
-            filenameEl.textContent=nameMatch?nameMatch[1]:"Không xác định";
+            const name=html.match(/var\s+optFileName\s*=\s*"([^"]+)"/);
+            nameEl.textContent=name?name[1]:"Unknown file";
 
             const doc=new DOMParser().parseFromString(html,"text/html");
             const link=doc.querySelector("#downloadButton")?.href;
 
             if(!link){
-                status.textContent="Không lấy được link 😢";
+                status.textContent="Không lấy được link";
                 return;
             }
 
-            status.textContent="Sẵn sàng tải 🚀";
+            status.textContent="Sẵn sàng tải";
             btn.disabled=false;
             btn.onclick=()=>{
-                status.textContent="Đang tải... ⏳";
+                status.textContent="Đang tải...";
                 window.location.href=link;
             }
         })
         .catch(()=>{
-            status.textContent="Lỗi kết nối MediaFire 😵";
+            status.textContent="Lỗi kết nối";
         });
 });
 </script>
