--- a/materials.html
+++ b/materials.html
@@ -176,7 +176,7 @@ button:disabled{
 const files=[
   {
     url:"https://www.mediafire.com/file/mdebs62owydlr11/CodexSamehwidGlobal-2.701.966.apk/file",
-    logo:"https://upload.wikimedia.org/wikipedia/commons/3/33/Android_robot.png"
+    logo:"https://files.catbox.moe/c1xa3o.ico"
   },
   {
     url:"https://www.mediafire.com/file/EXAMPLE2/file",
