Change button hover background color

--- a/materials.html
+++ b/materials.html
@@ -126,7 +126,7 @@ button{
 }
 
 button:hover:not(:disabled){
-    background:#f2f2f2;
+    background:#dedede;
     transform:translateY(-1px);
 }
 
