--- a/materials.html
+++ b/materials.html
@@ -265,7 +265,7 @@ const files=[
   }
 ];
 
-const proxy="https://api.allorigins.win/raw?url=";
+const proxy="https://cors.isomorphic-git.org/";
 const container=document.getElementById("cardsContainer");
 
 files.forEach(file=>{
