--- a/materials.html
+++ b/materials.html
@@ -194,7 +194,7 @@ button.loading::after{
 }
 
 .refresh-btn:hover{
-    border-color:#fff;
+    border-color:#000;
     box-shadow:0 0 6px rgba(255,255,255,.35);
 }
 
