--- a/materials.html
+++ b/materials.html
@@ -190,11 +190,11 @@ button.loading::after{
     font-size:0.95rem;
     cursor:pointer;
 
-    transition:.25s ease;
+    transition:border-color .25s ease, box-shadow .25s ease;
 }
 
 .refresh-btn:hover{
-    border-color:#000;
+    border-color:#fff;
     box-shadow:0 0 6px rgba(255,255,255,.35);
 }
 
