--- a/materials.html
+++ b/materials.html
@@ -191,6 +191,10 @@ button.loading::after{
     cursor:pointer;
 
     transition:border-color .25s ease, box-shadow .25s ease;
+
+    -webkit-tap-highlight-color: transparent;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .refresh-btn:hover{
