--- a/materials.html
+++ b/materials.html
@@ -174,7 +174,7 @@ button.loading::after{
         text-align:center;
     }
 }
-
+    
 .refresh-btn{
     width:32px;
     height:32px;
@@ -182,23 +182,28 @@ button.loading::after{
     align-items:center;
     justify-content:center;
 
-    background:#000;
+    background:#000 !important;
+    color:#fff !important;
+
     border:1px solid transparent;
     border-radius:50%;
 
-    color:#fff;
     font-size:0.95rem;
     cursor:pointer;
 
-    transition:border-color .25s ease, box-shadow .25s ease;
+    transition:
+        border-color .25s ease,
+        box-shadow .25s ease;
 
     -webkit-tap-highlight-color: transparent;
     -webkit-appearance: none;
     appearance: none;
+    outline:none;
 }
 
-.refresh-btn:hover{
-    background:#000;
+.refresh-btn:hover,
+.refresh-btn:hover:not(:disabled){
+    background:#000 !important;
     border-color:#fff;
     box-shadow:0 0 6px rgba(255,255,255,.35);
 }
@@ -206,13 +211,14 @@ button.loading::after{
 .refresh-btn:active{
     background:#000 !important;
     border-color:#fff;
+    box-shadow:0 0 6px rgba(255,255,255,.35);
 }
 
 .refresh-btn:focus,
 .refresh-btn:focus-visible{
     background:#000 !important;
-    outline:none;
     border-color:#fff;
+    outline:none;
 }
 
 .refresh-btn.spin i{
