Refactor section header in materials.html

--- a/materials.html
+++ b/materials.html
@@ -336,40 +336,23 @@ button.loading::after{
 </header>
 
 <div class="section">
-
-    <div class="section-header">
-        <div class="section-header-left">
-            <h1>Materials</h1>
-            <button class="refresh-btn" id="refreshPage" title="Refresh">
-                <i class="fa fa-refresh" aria-hidden="true"></i>
-            </button>
-        </div>
-
-        <div class="section-header">
-          <div class="section-header-left">
-            <h1>Materials</h1>
-            <button class="refresh-btn" id="refreshPage" title="Refresh">
-              <i class="fa fa-refresh"></i>
-            </button>
-          </div>
-        
-          <div class="section-header-right">
-            <div class="search-box">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <input
-                type="text"
-                id="searchInput"
-                placeholder="Search..."
-                autocomplete="off"
-              >
-            </div>
-          </div>
-        </div>
+  <div class="section-header">
+    <div class="section-header-left">
+      <h1>Materials</h1>
+      <button class="refresh-btn" id="refreshPage" title="Refresh">
+        <i class="fa fa-refresh" aria-hidden="true"></i>
+      </button>
     </div>
-
-    <p>Below are the materials we used.</p>
-
-    <div id="cardsContainer"></div>
+    <div class="section-header-right">
+      <div class="search-box">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" id="searchInput" placeholder="Search..." autocomplete="off">
+      </div>
+    </div>
+  </div>
+</div>
+<p>Below are the materials we used.</p>
+<div id="cardsContainer"></div>
 </div>
 
 <script>
